deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-api
  labels:
    app: pokemon-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokemon-api
  # pod spec begins here
  template:
    metadata:
      labels:
        app: pokemon-api
    spec:
      containers:
        - name: pokemon-api
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
