deployment/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql
        image: mysql
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: db-container
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim


---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: db
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: mysql
  selector:
    app: db
  type: LoadBalancer
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql
#   annotations:
#     kubernetes.digitalocean.com/load-balancer-id: "a76f02bb280024c65b6c99a87dfb4b7f"
#   labels:
#     app: db
# spec:
#   ports:
#   - port: 3306
#     protocol: TCP
#     name: mysql
#   selector:
#     app: db
#   type: LoadBalancer
