deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: pokemon-api
  type: LoadBalancer
