deployment/zabbix-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-agent
  template:
    metadata:
      labels:
        app: zabbix-agent
    spec:
      containers:
      - name: zabbix-agent
        image: zabbix/zabbix-agent
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
  annotations:
    kubernetes.digitalocean.com/load-balancer-id: "a117dd5a46bbb4cbdadb028d8880956d"
  labels:
    app: zabbix-agent
spec:
  ports:
  - port: 10050
    protocol: TCP
    name: zabbix-agent
  selector:
    app: zabbix-agent
  type: LoadBalancer
